--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </script>
     <script src="sketch.js"></script>
   </head>
-  <body>
+  <body style="padding:0; margin:0;">
     <main>
     </main>
     <button onclick="location.reload();">Reload</button>
